--- a/shoulder-build/shoulder-base/shoulder-crypto/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-crypto/pom.xml
@@ -80,7 +80,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
 
-            <!-- attach source to jar -->
+            <!-- attach source -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
