--- a/shoulder-build/pom.xml
+++ b/shoulder-build/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-framework</artifactId>
-        <version>0.0.1</version><!-- shoulder-version -->
+        <version>0.0.1-RELEASE</version><!-- shoulder-version -->
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -25,7 +25,27 @@
 
     <modules>
         <module>shoulder-base</module>
-        <module>shoulder-starters</module>
+        <!--<module>shoulder-starters</module>-->
     </modules>
+
+    <build>
+        <plugins>
+            <!-- GPG  发布插件-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
