--- a/shoulder-build/shoulder-base/shoulder-security/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-security/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-parent</artifactId>
-        <version>0.0.1</version><!-- shoulder-version -->
+        <version>0.0.1-RELEASE</version><!-- shoulder-version -->
         <relativePath>../../../shoulder-parent/pom.xml</relativePath>
     </parent>
 
@@ -78,11 +78,7 @@
                 <artifactId>maven-source-plugin</artifactId>
             </plugin>
 
-            <!-- findbugs -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-            </plugin>
+
 
             <!-- unit test settings when mvn test -->
             <plugin>
