--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-framework</artifactId>
-        <version>0.0.1</version><!-- shoulder-version -->
+        <version>0.0.1-RELEASE</version><!-- shoulder-version -->
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
