refactor log add README

--- a/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
@@ -41,7 +41,7 @@
 
         <dependency>
             <groupId>cn.itlym</groupId>
-            <artifactId>shoulder-log-operation</artifactId>
+            <artifactId>shoulder-operation-log</artifactId>
             <optional>true</optional>
         </dependency>
 
