--- a/shoulder-build/shoulder-base/pom.xml
+++ b/shoulder-build/shoulder-base/pom.xml
@@ -16,7 +16,7 @@
         <module>shoulder-core</module>
         <module>shoulder-data-db</module>
         <module>shoulder-crypto</module>
-        <module>shoulder-log-operation</module>
+        <module>shoulder-operation-log</module>
         <module>shoulder-validation</module>
         <module>shoulder-rest-server</module>
         <module>shoulder-http</module>
