--- a/shoulder-build/shoulder-base/pom.xml
+++ b/shoulder-build/shoulder-base/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-build</artifactId>
-        <version>0.0.1-RELEASE</version><!-- shoulder-version -->
+        <version>0.1.0-SNAPSHOT</version><!-- shoulder-version -->
     </parent>
 
     <artifactId>shoulder-base</artifactId>
