--- a/shoulder-build/shoulder-starters/pom.xml
+++ b/shoulder-build/shoulder-starters/pom.xml
@@ -22,6 +22,7 @@
         <module>shoulder-starter-auth-server</module>
         <module>shoulder-starter-trace</module>
         <module>shoulder-starter-minio</module>
+        <module>shoulder-starter-monitor</module>
     </modules>
 
 
