--- a/shoulder-build/shoulder-starters/shoulder-starter-web/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-web/pom.xml
@@ -21,6 +21,10 @@
             <groupId>cn.itlym</groupId>
             <artifactId>shoulder-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.itlym</groupId>
+            <artifactId>shoulder-rest-server</artifactId>
+        </dependency>
 
     </dependencies>
 
