--- a/shoulder-build/shoulder-base/shoulder-rest-server/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-rest-server/pom.xml
@@ -28,8 +28,21 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <optional>true</optional>
         </dependency>
+
+        <!-- spring boot 2.3+ 不在默认引入校验 -->
+        <!--<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>2.2.8.RELEASE</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>tomcat-embed-el</artifactId>
+                    <groupId>org.apache.tomcat.embed</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>-->
 
     </dependencies>
 
