--- a/shoulder-build/shoulder-starters/shoulder-starter-web/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-web/pom.xml
@@ -23,7 +23,7 @@
         </dependency>
         <dependency>
             <groupId>cn.itlym</groupId>
-            <artifactId>shoulder-rest-server</artifactId>
+            <artifactId>shoulder-web</artifactId>
         </dependency>
 
     </dependencies>
