--- a/shoulder-build/shoulder-base/shoulder-web/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-web/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>shoulder-rest-server</artifactId>
+    <artifactId>shoulder-web</artifactId>
 
     <dependencies>
 
