--- a/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-autoconfiguration/pom.xml
@@ -83,7 +83,7 @@
 
         <dependency>
             <groupId>cn.itlym</groupId>
-            <artifactId>shoulder-rest-server</artifactId>
+            <artifactId>shoulder-web</artifactId>
             <optional>true</optional>
         </dependency>
 
