--- a/shoulder-build/shoulder-base/shoulder-core/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-core/pom.xml
@@ -49,7 +49,7 @@
         </dependency>-->
         <dependency>
             <groupId>cn.itlym.shoulder</groupId>
-            <artifactId>shoulder-lombok</artifactId>
+            <artifactId>lombok</artifactId>
         </dependency>
 
 
