--- a/shoulder-build/shoulder-base/shoulder-core/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-core/pom.xml
@@ -146,7 +146,7 @@
             </plugin>
 
             <!-- for test -->
-            <!--<plugin>
+            <plugin>
                 <groupId>cn.itlym.shoulder</groupId>
                 <artifactId>errcode-maven-plugin</artifactId>
                 <version>0.1-SNAPSHOT</version>
@@ -158,12 +158,12 @@
                     <execution>
                         <phase>compile</phase>
                         <goals>
-                            <goal>generateErrorCodeInfo</goal>
+                            <!--<goal>generateErrorCodeInfo</goal>-->
                             <goal>countLine</goal>
                         </goals>
                     </execution>
                 </executions>
-            </plugin>-->
+            </plugin>
 
         </plugins>
     </build>
