--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -24,6 +24,7 @@
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
 
+        <mapstruct.version>1.3.1.Final</mapstruct.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <findbugs-maven-plugin.version>3.0.5</findbugs-maven-plugin.version>
 
