--- a/shoulder-build/shoulder-starters/pom.xml
+++ b/shoulder-build/shoulder-starters/pom.xml
@@ -7,6 +7,7 @@
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-build</artifactId>
         <version>0.1</version><!-- shoulder-version -->
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>shoulder-starters</artifactId>
