--- a/shoulder-build/shoulder-base/shoulder-auth-server/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-auth-server/pom.xml
@@ -29,6 +29,7 @@
         </dependency>
     </dependencies>
 
+
     <build>
         <plugins>
             <!-- compiler settings -->
@@ -43,7 +44,23 @@
                 <artifactId>maven-source-plugin</artifactId>
             </plugin>
 
+            <!-- javadoc -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
 
+            <!-- deploy -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+            </plugin>
+
+            <!-- findbugs -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+            </plugin>
 
             <!-- unit test settings when mvn test -->
             <plugin>
