--- a/shoulder-build/shoulder-base/shoulder-core/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-core/pom.xml
@@ -41,7 +41,10 @@
             <optional>true</optional>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>annotations</artifactId>
+        </dependency>
         <!-- ...................... lombok ...................... -->
         <!--<dependency>
             <groupId>org.projectlombok</groupId>
@@ -128,9 +131,16 @@
                 <artifactId>maven-source-plugin</artifactId>
             </plugin>
 
+            <!-- javadoc -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
+
+            <!-- deploy -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
             </plugin>
 
             <!-- findbugs -->
