--- a/shoulder-build/shoulder-base/shoulder-http/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-http/pom.xml
@@ -37,7 +37,17 @@
                 <artifactId>maven-source-plugin</artifactId>
             </plugin>
 
+            <!-- javadoc -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
 
+            <!-- deploy -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+            </plugin>
 
             <!-- unit test settings when mvn test -->
             <plugin>
