--- a/shoulder-build/shoulder-base/shoulder-operation-log/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-operation-log/pom.xml
@@ -23,6 +23,7 @@
 
     </dependencies>
 
+
     <build>
         <plugins>
             <!-- compiler settings -->
@@ -36,13 +37,24 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
             </plugin>
-            <!-- generate javadoc -->
+
+            <!-- javadoc -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
             </plugin>
 
+            <!-- deploy -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+            </plugin>
 
+            <!-- findbugs -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+            </plugin>
 
             <!-- unit test settings when mvn test -->
             <plugin>
