--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -64,6 +64,7 @@
         <!-- useful tools -->
         <hutool.version>5.3.8</hutool.version>
         <guava.version>29.0-jre</guava.version>
+        <findbugs-annotations.version>3.0.1</findbugs-annotations.version>
         <alibaba.transmittable.version>2.11.5</alibaba.transmittable.version>
 
         <bcprov.jdk15on.version>1.65.01</bcprov.jdk15on.version>
@@ -414,6 +415,12 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.code.findbugs</groupId>
+                <artifactId>annotations</artifactId>
+                <version>{findbugs-annotations.version}</version>
             </dependency>
 
             <!-- java native access -->
