--- a/shoulder-build/shoulder-starters/shoulder-starter-auth-server/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-auth-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-parent</artifactId>
-        <version>0.1</version><!-- shoulder-version -->
+        <version>0.2-SNAPSHOT</version><!-- shoulder-version -->
         <relativePath>../../../shoulder-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -15,7 +15,7 @@
         默认的认证服务器
         （提供基础认证 账号密码认证、手机号认证、手机号密码认证；
             作为认证服务器 Oauth2、OIDC、SAML2；
-            作为Oauth2客户端，如QQ、Wechat、gitee、github）
+            作为Oauth2客户端，如 GitHub、QQ、WeChat、Gitee）
     </description>
 
     <dependencies>
