--- a/shoulder-build/pom.xml
+++ b/shoulder-build/pom.xml
@@ -38,7 +38,7 @@
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
-                        <phase>verify</phase><!-- gpg phase verify deploy -->
+                        <phase>deploy</phase><!-- gpg phase verify deploy -->
                         <goals>
                             <goal>sign</goal>
                         </goals>
