--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -17,7 +17,7 @@
     <properties>
         <!-- shoulder framework bom -->
         <shoulder-lombok.version>0.1</shoulder-lombok.version>
-        <shoulder.version>${project.parent.version}</shoulder.version>
+        <shoulder.version>0.2-SNAPSHOT</shoulder.version><!-- shoulder-version -->
 
         <!-- dependencies bom -->
         <!--<spring.version>5.2.4.RELEASE</spring.version>-->
@@ -82,6 +82,7 @@
         <postgresql.version>42.2.5</postgresql.version>
         <druid.version>1.1.21</druid.version>
         <mybatis-plus.version>3.3.2</mybatis-plus.version>
+        <p6spy.version>3.9.1</p6spy.version>
 
         <!-- dataBase-->
         <minio.version>7.0.2</minio.version>
@@ -142,13 +143,13 @@
 
 
             <!-- https://spring-cloud-alibaba-group.github.io/github-pages/greenwich/spring-cloud-alibaba.html -->
-            <!--<dependency>
+            <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                 <version>${spring-cloud-alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>-->
+            </dependency>
 
             <!-- ================================== Shoulder-framework party ==================================== -->
 
@@ -481,6 +482,11 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-generator</artifactId>
                 <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>p6spy</groupId>
+                <artifactId>p6spy</artifactId>
+                <version>${p6spy.version}</version>
             </dependency>
             <!-- db end -->
 
